# tsi2py

./: README.md  pyproject.toml
src/tsi2py/: __main__.py  parser.py  sample.ts  serializer.py
tests/: basic_test.py  conftest.py  extension_test.py  tsi2py_test.py
tests/interfaces/: enum.ts  extends.ts  sample.ts
