[project]
name = "tsi2py"
version = "0.1.0"
description = "Convert TS interfaces to Python code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tsi2py = "tsi2py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsi2py"]
