[project]
name = "tsi2py"
version = "0.1.0"
description = "Convert TS interfaces to Python code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pytest-icdiff>=0.9",
    "pytest>=8.3.2",
]

[project.scripts]
tsi2py = "tsi2py.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsi2py"]
